# learning-cmake

./: CMakeLists.txt
src/examples/person_detection/: main_functions.cc
